force-app/main/default/objects/GSP_Revenue_Target__c/GSP_Revenue_Target__c.object-meta.xml
<CustomObject>
    <label>GSP Revenue Target</label>
    <nameField>
        <displayFormat>RT-{YYYY}-{MM}-{0}</displayFormat>
        <label>Revenue Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>