force-app/main/default/objects/GSP_Revenue_Target__c/fields/Expected_Target_Achievement__c.field-meta.xml
<CustomField>
    <fullName>Expected_Target_Achievement__c</fullName>
    <formula>IF (Expected_Revenue__c =0,0,(Expected_Revenue__c/ Revenue_Target__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Target % Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>