force-app/main/default/objects/GSP_Revenue_Target__c/fields/Expected_Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expected_Variance_Amount__c</fullName>
    <formula>Expected_Revenue__c - Revenue_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Variance Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>