force-app/main/default/objects/GSP_Revenue_Target__c/fields/Pipeline_as_of_Target__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_as_of_Target__c</fullName>
    <formula>IF ((Pipeline_Revenue__c =0),0,(Pipeline_Revenue__c / Revenue_Target__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline as % of Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>