force-app/main/default/objects/GSP_Revenue_Target__c/fields/Pipeline_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Revenue__c</fullName>
    <label>Pipeline Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>