force-app/main/default/objects/GSP_Revenue_Target__c/fields/Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Target__c</fullName>
    <label>Revenue Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>