force-app/main/default/objects/GSP_Revenue_Target__c/fields/Target_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Target_Achieved__c</fullName>
    <formula>IF(Won_Revenue__c = 0, 0, Won_Revenue__c / Revenue_Target__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Target Achieved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>