force-app/main/default/objects/GSP_Revenue_Target__c/fields/Target_User__c.field-meta.xml
<CustomField>
    <fullName>Target_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Target Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Revenue_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>