force-app/main/default/objects/GSP_Revenue_Target__c/fields/Weighted_Pipeline_as_Target__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Pipeline_as_Target__c</fullName>
    <formula>IF((Weighted_Revenue__c =0),0, (Weighted_Revenue__c / Revenue_Target__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Pipeline as % Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>