force-app/main/default/objects/GSP_Revenue_Target__c/fields/Weighted_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Revenue__c</fullName>
    <label>Weighted Pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>