force-app/main/default/objects/GSP_Revenue_Target__c/fields/Won_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Won_Revenue__c</fullName>
    <label>Won Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>